--- a/sivusto/index.html
+++ b/sivusto/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar bg-dark" data-bs-theme="dark">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Visasivusto</a>
+          <a class="navbar-brand" href="./index.html">Visasivusto</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -26,7 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Etusivu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tietoja</a>
+                <a class="nav-link" href="./tietojasivu.html">Tietoja</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
