--- a/sivusto/kertotauluvisa.html
+++ b/sivusto/kertotauluvisa.html
@@ -24,13 +24,13 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Etusivu</a>
+                <a class="nav-link" aria-current="page" href="./index.html">Etusivu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./tietojasivu.html">Tietoja</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Tietovisat
                 </a>
                 <ul class="dropdown-menu">
