--- a/sivusto/musiikkivisa.html
+++ b/sivusto/musiikkivisa.html
@@ -16,20 +16,20 @@
     <nav class="navbar bg-dark" data-bs-theme="dark">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">Visasivusto</a>
+          <a class="navbar-brand">Visasivusto</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Etusivu</a>
+                <a class="nav-link" aria-current="page" href="./index.html">Etusivu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./tietojasivu.html">Tietoja</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Tietovisat
                 </a>
                 <ul class="dropdown-menu">
