--- a/sivusto/tietojasivu.html
+++ b/sivusto/tietojasivu.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Nunito%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=6.1.1" media="all">
-    <link rel="stylesheet" href="./etusivu/style/style.css">
+    <link rel="stylesheet" href="./styles/etusivu.css">
 </head>
 <body>
 
@@ -16,27 +16,27 @@
     <nav class="navbar bg-dark" data-bs-theme="dark">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Visasivusto</a>
+          <a class="navbar-brand" href="./index.html">Visasivusto</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Etusivu</a>
+                <a class="nav-link" aria-current="page" href="./index.html">Etusivu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tietoja</a>
+                <a class="nav-link active" href="./tietojasivu.html">Tietoja</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Tietovisat
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Matematiikka-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Kertotaulu-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Musiikki-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Historia-visa</a></li>
+                  <li><a class="dropdown-item" href="./matikkavisa.html">Matematiikka-visa</a></li>
+                  <li><a class="dropdown-item" href="./kertotauluvisa.html">Kertotaulu-visa</a></li>
+                  <li><a class="dropdown-item" href="./musiikkivisa.html">Musiikki-visa</a></li>
+                  <li><a class="dropdown-item" href="./historiavisa.html">Historia-visa</a></li>
                 </ul>
               </li>
             </ul>
@@ -47,6 +47,28 @@
 
   <main class="container">
   </main> 
+
+    <h4>Tämä visailusivusto on tarkoitettu 5-6 luokkalaisille oppilaille sekä heidän opettajilleen.<br><br> Tässä voit testata valmiuttasi yläasteelle matematiikan, historian ja musiikin yleistiedon merkeissä!</h4>
+
+    <h5>Tekijät</h5>
+    <table class="tekijat">
+      <tr>
+        <td>Miika Venetvaara</td>
+        <td>Matikkavisa</td> 
+      </tr>
+      <tr>
+        <td>Jonathan Holmberg</td>
+        <td>Kertotauluvisa</td>
+      </tr>
+      <tr>
+        <td>Reeta Valtamäki</td>
+        <td>Musavisa</td>
+      </tr>
+      <tr>
+        <td>Venla Äijäla</td>
+        <td>Historiavisa</td>
+      </tr>
+    </table>
 
 
     <div id="footer">Made by: Ryhmä 2 @ kevät 2023</div>
